# Facet

./: .gitignore  .pdm-python  .pre-commit-config.yaml  LICENSE  QUICKSTART.md  README.md  alembic.ini  index_demo_images.py  main.py  pyproject.toml
config/: settings.json
photo_app/app/: album_view.py  gallery_view.py  main_window.py  view_models.py  workers.py
photo_app/app/models/: album_tree_model.py  cluster_image_model.py  photo_grid_model.py
photo_app/app/view_models/: album_view_model.py  gallery_view_model.py
photo_app/app/widgets/: __init__.py  advanced_filter_editor.py  album_tree.py  album_tree_style.py  batch_face_tagger.py  browser_workspace.py  cluster_image_grid.py  cluster_image_inspector.py  face_detection_widget.py  filter_bar.py  filter_dialog_integration.py  filter_editor.py  image_detail_panel.py  import_dialog.py  metadata_editor.py  people_browser.py  person_card_widget.py  person_detail_view.py  person_stack_widget.py  photo_grid.py  photo_grid_delegate.py  photo_viewer.py  star_rating.py  tag_editor.py
photo_app/app/workers/: album_worker.py  import_worker.py  indexing_worker.py  people_list_worker.py  tile_build_worker.py
photo_app/config/: constants.py  keyboard_shortcuts.py  settings.py  theme.py
photo_app/domain/: models.py  repositories.py  services.py  value_objects.py
photo_app/indexing/: face_indexer.py  image_indexer.py
photo_app/infrastructure/: db.py  exif_handler.py  file_scanner.py  repositories.py  sqlalchemy_models.py  thumbnail_store.py  thumbnail_tiles.py
photo_app/migrations/: env.py
photo_app/migrations/versions/: 0001_initial.py  0002_app_settings.py  0003_face_overrides.py  0004_browsing_cache.py  0005_identity_clusters.py  0006_metadata_fields.py  (+6 more)
photo_app/ml/: clustering.py  embedding_model.py  face_detector.py  protocols.py  quality_scorer.py
photo_app/services/: album_export_service.py  album_query_cache_service.py  album_service.py  ann_index.py  face_index_service.py  face_review_service.py  html_gallery_exporter.py  identity_cluster_service.py  identity_maintenance_jobs.py  image_index_service.py  import_service.py  metadata_sync_service.py  model_setup_service.py  person_service.py  photo_quality_service.py  settings_service.py  tags_service.py
photo_app/tests/: perf_harness.py  test_album_service.py  test_album_tree_model_ui.py  test_browsing_cache.py  test_clustering.py  test_domain_models.py  test_identity_clusters.py  test_photo_grid_model_ui.py  test_repositories.py
