[project]
name = "photo-app"
version = "0.1.0"
description = "Local ML Photo Manager"
authors = [{ name = "Hansotto Kristiansen" }]
requires-python = ">=3.14,<3.15"
dependencies = [
  "PySide6~=6.8.0",
  "SQLAlchemy~=2.0.36",
  "alembic~=1.14.0",
  "insightface~=0.7.3",
  "onnxruntime~=1.20.1",
  "hdbscan~=0.8.40",
  "numpy~=2.1.3",
  "Pillow~=11.0.0",
  "blake3~=1.0.4",
  "piexif~=1.1.3",
  "opencv-python-headless~=4.13.0.92",
  "opencv-python~=4.13.0.92"
]

[dependency-groups]
dev = [
  "mypy>=1.13.0",
  "ruff>=0.7.4",
  "pytest>=8.3.3",
  "pytest-cov>=6.0.0",
  "pre-commit>=4.0.1",
  "types-Pillow>=10.2.0.20240822"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
lint = "ruff check . && mypy photo_app/"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "E501"]

[tool.ruff.lint.per-file-ignores]
"photo_app/tests/*.py" = ["S101", "SLF001"]

[tool.mypy]
strict = true
warn_unused_configs = true
python_version = "3.14"
plugins = []

[tool.pytest.ini_options]
testpaths = ["photo_app/tests"]
addopts = "-q"
