[project]
name = "photo-app"
version = "0.1.0"
description = "Local ML Photo Manager"
authors = [{ name = "Hansotto Kristiansen" }]
requires-python = ">=3.14,<3.15"
dependencies = [
  "PySide6~=6.10.2",
  "SQLAlchemy~=2.0.48",
  "alembic~=1.18.4",
  "insightface~=0.7.3",
  "onnxruntime~=1.24.2",
  "hdbscan~=0.8.41",
  "numpy~=2.4.2",
  "Pillow~=12.1.1",
  "blake3~=1.0.8",
  "piexif~=1.1.3",
  "opencv-python-headless~=4.13.0.92",
  "opencv-python~=4.13.0.92",
]

[dependency-groups]
dev = [
  "mypy~=1.19.1",
  "ruff~=0.15.4",
  "pytest~=9.0.2",
  "pytest-cov~=7.0.0",
  "types-Pillow~=10.2.0.20240822",
  "black~=26.3.1"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
lint = { composite = ["black .", "ruff check .", "mypy photo_app/"] }

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "E501"]

[tool.ruff.lint.per-file-ignores]
"photo_app/tests/*.py" = ["S101", "SLF001"]

[tool.mypy]
strict = true
warn_unused_configs = true
python_version = "3.14"
plugins = []

[tool.pytest.ini_options]
testpaths = ["photo_app/tests"]
addopts = "-q"
